# open-hummingbird-eval

./: .gitignore  env.yml  eval.py  pyproject.toml
examples/: hbird_eval_example.ipynb
hummingbird_eval/: ade20kdata.py  eval_metrics.py  hbird_eval.py  transforms.py
